@@ -5,6 +5,7 @@
 * AuthorizeNet: Fix store using new profile [duff]
 * Clearhaus: Support private key for signature [curiousepic]
 * Clearhaus: Copy private_key when stripping [curiousepic]
+* Quickpay v10: Remove amount requirement for store [curiousepic]
 
 
 == Version 1.59.0 (May 18, 2016)
